<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/btn_viewers"
        style="@style/SettingsRowStyle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_viewers"
            style="@style/SettingsRowTextStyle" />

        <TextView
            android:id="@+id/tv_viewers_premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="(Premium)"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="italic"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_premium"
        style="@style/SettingsRowStyle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_premium"
            style="@style/SettingsRowTextStyle" />

        <TextView
            android:id="@+id/tv_premium_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_premium_off"
            style="@style/SettingsRowTextStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_adult_content"
        style="@style/SettingsRowStyle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_adult_content"
            style="@style/SettingsRowTextStyle" />

        <TextView
            android:id="@+id/tv_adult_content_premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="(Premium)"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="italic"
            android:visibility="gone" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_adult_content_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_adult_content_off"
            style="@style/SettingsRowTextStyle" />
    </LinearLayout>

</LinearLayout>
