<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/btn_app_language"
        style="@style/SettingsRowStyle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_app_language"
            style="@style/SettingsRowTextStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_clear_cache"
        style="@style/SettingsRowStyle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_clear_cache"
            style="@style/SettingsRowTextStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_about"
        style="@style/SettingsRowStyle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_about_app"
            style="@style/SettingsRowTextStyle" />
    </LinearLayout>

</LinearLayout>
